correct tray spacing

--- a/home-manager/programs/waybar/style.css
+++ b/home-manager/programs/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     font-family: "JetBrainsMono Nerd Font";
     font-weight: bold;
-    font-size: 12px;
+    font-size: 14px;
     min-height: 0;
   }
   
